updated code for new bluetooth chip

--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,15 @@
         	<div><span id="right-motor-speed">0</span>%</div>
         </div>
         
+        <table style="width:100%; text-align:center;">
+        	<tr>
+	        	<td id="ir_1">10</td>
+	        	<td id="ir_2">10</td>
+	        	<td id="ir_3">10</td>
+	        	<td id="ir_4">10</td>
+	        </tr>
+        </table>
+        
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/jquery.min.js"></script>
         <script type="text/javascript" src="js/jquery-ui.min.js"></script>
